--- a/Updater.WebApi/App.config
+++ b/Updater.WebApi/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="applications" type="Updater.WebApi.SystemConfiguration.Applications, Updater.WebApi" />
+  </configSections>
   <appSettings>
     <add key="Host" value="http://localhost:9000/" />
     <add key="RefreshTimeout" value="2000" />
-    <add key="AppName" value="test.exe" />
   </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <applications>
+    <add appGuid="d4f9cc0f-73ea-4f87-b97d-66716a48b74f" appName="Updater.Test.WinApp.exe" />
+  </applications>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
