--- a/Updater.WebApi/Updater.WebApi.csproj
+++ b/Updater.WebApi/Updater.WebApi.csproj
@@ -100,7 +100,8 @@
     <Compile Include="Api\UpdateController.cs" />
     <Compile Include="AuthorizationAttribute.cs" />
     <Compile Include="PackageNameProvider.cs" />
-    <Compile Include="SystemConfiguration.cs" />
+    <Compile Include="SystemConfiguration\ApplicationCollection.cs" />
+    <Compile Include="SystemConfiguration\ConfigurationProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ISecurityProvider.cs" />
@@ -108,6 +109,8 @@
     <Compile Include="Providers\FakeSecurityProvider.cs" />
     <Compile Include="Providers\FakeSourceProvider.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="SystemConfiguration\Application.cs" />
+    <Compile Include="SystemConfiguration\Applications.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
