--- a/Updater.Test.WinApp/Updater.Test.WinApp.csproj
+++ b/Updater.Test.WinApp/Updater.Test.WinApp.csproj
@@ -52,6 +52,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurityProvider.cs" />
+    <Compile Include="UpdateHandler.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
