--- a/Updater.UpdatePlugin/Updater.UpdatePlugin.csproj
+++ b/Updater.UpdatePlugin/Updater.UpdatePlugin.csproj
@@ -30,8 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,9 +44,15 @@
   <ItemGroup>
     <Compile Include="Providers\ISecurityProvider.cs" />
     <Compile Include="Providers\ISourceProvider.cs" />
-    <Compile Include="Providers\IUpdateEventHandler.cs" />
+    <Compile Include="Providers\IUpdateHandler.cs" />
+    <Compile Include="Providers\PackageInfo.cs" />
+    <Compile Include="UpdateManager.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApiProvider\FileVm.cs" />
+    <Compile Include="WebApiProvider\IVm.cs" />
+    <Compile Include="WebApiProvider\CheckVersionVm.cs" />
+    <Compile Include="WebApiProvider\WebApiSourceProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
